feat(gateway): #3 add gateway dialog

--- a/src/app/gateways/pages/gateway-list/gateway-list.component.html
+++ b/src/app/gateways/pages/gateway-list/gateway-list.component.html
@@ -1,4 +1,10 @@
 <div class="mat-elevation-z8">
+  <button mat-button (click)="openDialog()" aria-label="">
+    <mat-icon>add</mat-icon>
+
+    Add Gateway
+  </button>
+
   <table mat-table class="full-width-table" matSort aria-label="Elements">
     <!-- view Column -->
     <ng-container matColumnDef="view">
