feat(gateway): device add/remove form

--- a/src/app/gateways/pages/details/details.component.html
+++ b/src/app/gateways/pages/details/details.component.html
@@ -19,6 +19,6 @@
     ></rila-device-list>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button>Ok</button>
+    <!-- <button mat-button>Ok</button> -->
   </mat-card-actions>
 </mat-card>
