--- a/src/app/gateways/components/add-gateway-dialog/add-gateway-dialog.component.html
+++ b/src/app/gateways/components/add-gateway-dialog/add-gateway-dialog.component.html
@@ -9,15 +9,11 @@
             placeholder="Serial Number"
             formControlName="serialNo"
           />
-          <mat-error
-            *ngIf="form.controls['serialNo'].hasError('required')"
-          >
+          <mat-error *ngIf="form.controls['serialNo'].hasError('required')">
             Serial Number is <strong>required</strong>
           </mat-error>
         </mat-form-field>
       </div>
-    </div>
-    <div class="row">
       <div class="col">
         <mat-form-field class="full-width">
           <input matInput placeholder="Name" formControlName="name" />
@@ -33,14 +29,44 @@
           <input
             matInput
             placeholder="IPv4 Address"
+            pattern="^((25[0-5]|(2[0-4]|1\d|[1-9]|)\d)\.?\b){4}$"
             formControlName="ipv4Address"
           />
-          <mat-error
-            *ngIf="form.controls['ipv4Address'].hasError('required')"
-          >
+          <mat-hint>xxx.xxx.xxx.xxx </mat-hint>
+          <mat-error *ngIf="form.controls['ipv4Address'].hasError('required')">
             IPv4 Address is <strong>required</strong>
           </mat-error>
+          <mat-error *ngIf="form.controls['ipv4Address']"
+            >Invalid IPv4 address</mat-error
+          >
         </mat-form-field>
+      </div>
+    </div>
+    <div class="row mt-2">
+      <div class="col">
+        <button
+          *ngIf="!devices.length"
+          mat-stroked-button
+          color="primary"
+          type="button"
+          class="full-width"
+          (click)="onAddDeviceClick()"
+        >
+          Add device
+        </button>
+
+        <div formArrayName="devices">
+          <ng-container
+            *ngFor="let deviceForm of devices?.controls; index as deviceIndex"
+          >
+            <rila-device-form
+              [form]="parseForm(deviceForm)"
+              [index]="deviceIndex"
+              (submitForm)="onSubmitDevice($event)"
+              (removeForm)="onRemoveDevice($event)"
+            ></rila-device-form>
+          </ng-container>
+        </div>
       </div>
     </div>
   </form>
@@ -51,6 +77,7 @@
     mat-flat-button
     color="primary"
     [mat-dialog-close]="true"
+    [disabled]="form.invalid"
     cdkFocusInitial
   >
     Submit
