--- a/src/app/gateways/components/add-gateway-dialog/add-gateway-dialog.component.scss
+++ b/src/app/gateways/components/add-gateway-dialog/add-gateway-dialog.component.scss
@@ -2,26 +2,19 @@
   width: 100%;
 }
 
-.shipping-card {
-  min-width: 120px;
-  margin: 20px auto;
+.gateway{
+  &__row {
+    display: flex;
+    flex-direction: row;
+  }
+
+  &__col {
+    flex: 1;
+    margin-right: 20px;
+  }
 }
 
-.mat-radio-button {
-  display: block;
-  margin: 5px 0;
-}
-
-.row {
-  display: flex;
-  flex-direction: row;
-}
-
-.col {
-  flex: 1;
-  margin-right: 20px;
-}
-
-.col:last-child {
-  margin-right: 0;
+// util - TODO: move to util scss file
+.mt-2 {
+  margin-block-start: 18px;
 }
