--- a/src/app/gateways/pages/gateway-list/gateway-list.component.html
+++ b/src/app/gateways/pages/gateway-list/gateway-list.component.html
@@ -10,7 +10,7 @@
     <ng-container matColumnDef="view">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>view</th>
       <td mat-cell *matCellDef="let row">
-        <mat-icon>visibility</mat-icon>
+        <a (click)="redirectToDetails(row.serialNo)"><mat-icon>visibility</mat-icon> </a>
       </td>
     </ng-container>
 
@@ -22,7 +22,9 @@
 
     <!-- Devices Column -->
     <ng-container matColumnDef="devices">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Peripheral Devices</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        Peripheral Devices
+      </th>
       <td mat-cell *matCellDef="let row">{{ row.devices.length }}</td>
     </ng-container>
 
