--- a/src/app/gateways/pages/details/details.component.html
+++ b/src/app/gateways/pages/details/details.component.html
@@ -3,22 +3,40 @@
     <mat-card-title>Gateway</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <mat-chip-list aria-label="Color selection">
-      <mat-chip selected>
-        Name: {{ details?.name }}
-      </mat-chip>
-      <mat-chip selected>
-        Serial No: {{ details?.serialNo }}
-      </mat-chip>
-      <mat-chip selected> IPv4: {{ details?.ipv4Address }} </mat-chip>
-    </mat-chip-list>
+    <div class="gateway__row">
+      <span class="gateway__col">
+        <span class="gateway__label"> Serial number </span>
+        <span class="gateway__content">
+          <p>
+            {{ details?.serial }}
+          </p>
+        </span>
+      </span>
 
+      <span class="gateway__col">
+        <span class="gateway__label"> Name </span>
+        <span class="gateway__content">
+          <p>
+            {{ details?.name }}
+          </p>
+        </span>
+      </span>
+
+      <span class="gateway__col">
+        <span class="gateway__label"> Ipv4 Address </span>
+        <span class="gateway__content">
+          <p>
+            {{ details?.ipv4 }}
+          </p>
+        </span>
+      </span>
+    </div>
     <rila-device-list
       *ngIf="details?.devices"
       [deviceList]="details?.devices"
     ></rila-device-list>
   </mat-card-content>
   <mat-card-actions>
-    <!-- <button mat-button>Ok</button> -->
+    <button mat-button (click)="openDialog()">Edit</button>
   </mat-card-actions>
 </mat-card>
