--- a/src/app/gateways/pages/gateway-list/gateway-list.component.html
+++ b/src/app/gateways/pages/gateway-list/gateway-list.component.html
@@ -10,9 +10,17 @@
     <ng-container matColumnDef="view">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>view</th>
       <td mat-cell *matCellDef="let row">
-        <a (click)="redirectToDetails(row.serialNo)"><mat-icon>visibility</mat-icon> </a>
+        <a (click)="redirectToDetails(row.serial)"><mat-icon>visibility</mat-icon> </a>
       </td>
     </ng-container>
+
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="serial">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Serial</th>
+      <td mat-cell *matCellDef="let row">{{ row.serial }}</td>
+    </ng-container>
+
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
